crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__login_browser_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Sign in to codex                                                             │"
"│   Finish in the browser. If it did not open, go to:                          │"
"│   https://auth.openai.com/oauth/authorize?client_id=app_x&state=s1           │"
"│ ❯ 1. Cancel (esc)                                                            │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
