crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__long_path_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Write                                                                        │"
"│                                                                              │"
"│ Do you want to write some-directory/…/some-directory/note.txt?               │"
"│ ❯ 1. Yes                                                                     │"
"│   2. Yes, allow Write(src/) during this session                              │"
"│   3. No, and tell bingo what to do differently (esc)                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
