crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__markdown_table_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> how many tests are there?                                                     "
"                                                                                "
"⏺ Per crate:                                                                    "
"                                                                                "
"  crate        tests  time                                                      "
"  ────────────────────────                                                      "
"  sdk             41  0.02                                                      "
"  core           137  1.40                                                      "
"  surface-tui      9     –                                                      "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
